--- a/go-breeders/templates/test-patterns.page.gohtml
+++ b/go-breeders/templates/test-patterns.page.gohtml
@@ -24,6 +24,16 @@
             <div class="mt-2" style="outline: 1px solid #bbb; padding: 1em;">
                 <pre id="abstract-factory-output" style="margin:0;"><span>Nothing received yet...</span></pre>
             </div>
+
+            <hr class="mt-4">
+            <h3 class="mt-3">Builder Factory</h3>
+            <div>
+                <a href="javascript:void(0);" id="dog-builder-btn" class="btn btn-outline-secondary">Get a dog from builder</a>
+                <a href="javascript:void(0);" id="cat-builder-btn" class="btn btn-outline-secondary">Get a cat from builder</a>
+            </div>
+            <div class="mt-2" style="outline: 1px solid #bbb; padding: 1em;">
+                <pre id="builder-output" style="margin:0;"><span>Nothing received yet...</span></pre>
+            </div>
         </div>
     </div>
 </div>
@@ -38,6 +48,10 @@ let factoryOutput = document.getElementById("factory-output");
 let dogAbstractFactoryButton = document.getElementById("dog-abstract-btn");
 let catAbstractFactoryButton = document.getElementById("cat-abstract-btn");
 let abstractFactoryOutput = document.getElementById("abstract-factory-output");
+
+let dogBuilderButton = document.getElementById("dog-builder-btn");
+let catBuilderButton = document.getElementById("cat-builder-btn");
+let builderOutput = document.getElementById("builder-output");
 
 document.addEventListener("DOMContentLoaded", function() {
     dogFactoryButton.addEventListener("click", function() {
@@ -84,6 +98,30 @@ document.addEventListener("DOMContentLoaded", function() {
                 abstractFactoryOutput.innerHTML = data.error;
             } else {
                 abstractFactoryOutput.innerHTML = JSON.stringify(data, undefined, 4);
+            }
+        })
+    });
+
+    dogBuilderButton.addEventListener("click", function() {
+        fetch("/api/dog-from-builder", {method: 'GET'})
+        .then((response) => response.json())
+        .then((data) => {
+            if (data.error) {
+                builderOutput.innerHTML = data.error;
+            } else {
+                builderOutput.innerHTML = JSON.stringify(data, undefined, 4);
+            }
+        })
+    });
+
+    catBuilderButton.addEventListener("click", function() {
+        fetch("/api/cat-from-builder", {method: 'GET'})
+        .then((response) => response.json())
+        .then((data) => {
+            if (data.error) {
+                builderOutput.innerHTML = data.error;
+            } else {
+                builderOutput.innerHTML = JSON.stringify(data, undefined, 4);
             }
         })
     });
