--- a/go-breeders/templates/base.layout.gohtml
+++ b/go-breeders/templates/base.layout.gohtml
@@ -40,6 +40,12 @@
           <li class="nav-item">
             <a class="nav-link" href="/cat-breeders">Dog Breeders Directory</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/dog-of-month">Dog of Month</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/test-patterns">Patterns</a>
+          </li>
         </ul>
       </div>
     </div>
